ACR2-893: Spacing issues in navigation.
Update the spacing issue in navigation.

--- a/docroot/themes/custom/whitelabel/components/_patterns/01-molecules/00-header-primary/block-logo-navigation/menu-logo-navigation.ltr.scss
+++ b/docroot/themes/custom/whitelabel/components/_patterns/01-molecules/00-header-primary/block-logo-navigation/menu-logo-navigation.ltr.scss
@@ -195,3 +195,17 @@ html[dir=rtl] {
     }
   }
 }
+
+.toolbar-vertical {
+  .vertical-layout .navigation__sub-menu {
+    @include breakpoint($upto-palm) {
+      margin-top: 5.4rem;
+    }
+  }
+
+  .menu-close {
+    @include breakpoint($upto-palm) {
+      top: 2.625rem;
+    }
+  }
+}
